# alabs-live

./: Cargo.toml  notes.txt  rustfmt.toml
bonus/: notes.txt  warandpeace.txt
bonus/best/src/: main.rs
bonus/favor_iterators/src/: main.rs
bonus/file_adapt/: Cargo.toml
bonus/file_adapt/src/: main.rs
bonus/file_read/: Cargo.toml
bonus/file_read/src/: main.rs
session1/: notes.txt
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/login/: users.json
session1/login/src/: main.rs
session1/login_manager/: users.json
session1/login_manager/src/: main.rs
session1/variables/src/: main.rs
session2/: notes.txt
session2/affinity/src/: main.rs
session2/channels1/src/: main.rs
session2/deadlocks/src/: main.rs
session2/divide_work/src/: main.rs
session2/footgun/src/: main.rs
session2/hello/src/: main.rs
session2/mutexes/src/: main.rs
session2/parking/src/: main.rs
session2/priority/: Cargo.toml
session2/priority/src/: main.rs
session2/rayon_iters/src/: main.rs
session2/rayon_scopes/src/: main.rs
session2/rwlocks/src/: main.rs
session2/scope_threads/: Cargo.toml
session2/scope_threads/src/: main.rs
session2/thread_builder/src/: main.rs
session2/workers/src/: main.rs
session2/workers2/: Cargo.toml
session2/workers2/src/: main.rs
session3/: warandpeace.txt
session3/async_mutex/: Cargo.toml
session3/async_mutex/src/: main.rs
session3/blocking/: Cargo.toml
session3/blocking/src/: main.rs
session3/channels/: Cargo.toml
session3/channels/src/: main.rs
session3/errors/: Cargo.toml
session3/errors/src/: main.rs
session3/fileio/: Cargo.toml
session3/fileio/src/: main.rs
session3/hello_async/src/: main.rs
session3/hello_tokio/: Cargo.toml
session3/hello_tokio/src/: main.rs
session3/hello_tokio2/: Cargo.toml
session3/hello_tokio2/src/: main.rs
session3/recursion/src/: main.rs
session3/rest_client/: Cargo.toml
session3/rest_client/src/: main.rs
session3/tcp_server/: Cargo.toml
session3/tcp_server/src/: main.rs
session3/tokio_select/: Cargo.toml
session3/tokio_select/src/: main.rs
session3/tokio_select2/: Cargo.toml
session3/tokio_select2/src/: main.rs
session3/tokio_testing/: Cargo.toml
session3/tokio_testing/src/: lib.rs
session4/: notes.txt
session4/db/: Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
session4/db/migrations/: 20250806230952_initial.sql  20250807003727_more_messages.sql
session4/db/src/: main.rs
session4/logspan/: Cargo.toml
session4/logspan/src/: main.rs
session4/thumbs/: Cargo.toml  images.db  images.db-shm  images.db-wal
session4/thumbs/src/: index.html  main.rs
session4/web_service/: Cargo.toml
session4/web_service/src/: main.rs
session5/: note.txt
session5/bytes/: Cargo.toml
session5/bytes/src/: main.rs
session5/cycles/src/: main.rs
session5/dropping/src/: main.rs
session5/dropping_raii/: Cargo.toml
session5/dropping_raii/src/: main.rs
session5/ffi/src/: main.rs
session5/generics/src/: main.rs
session5/iterators/src/: main.rs
session5/lifetimes/src/: main.rs
session5/memory/: Cargo.toml
session5/memory/src/: main.rs  unsafe.rs
session5/memory_fragmentation/: Cargo.toml
session5/memory_fragmentation/src/: main.rs
session5/packing/src/: main.rs
session5/refc/src/: main.rs
session5/traits/src/: main.rs
session6/: notes.txt
session6/collector/: Cargo.toml  uuid
session6/collector/src/: main.rs
session6/server/: Cargo.toml  collection.db  collection.db-shm  collection.db-wal
session6/server/src/: collector.html  collector.rs  main.rs
session6/shared_data/: Cargo.toml
session6/shared_data/src/: lib.rs
src/: main.rs
