[package]
name = "alab-live"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ 
    "session1/authentication",
    "session1/hello_world",
    "session1/login", 
    "session1/login_manager",
    "session1/variables", 
    "session2/affinity", 
    "session2/channels1", 
    "session2/dashing", 
    "session2/deadlocks", 
    "session2/divide_work", 
    "session2/footgun", 
    "session2/hello", 
    "session2/mutexes", 
    "session2/parking", 
    "session2/priority", 
    "session2/rayon_iters", 
    "session2/rayon_scopes", 
    "session2/rwlocks", 
    "session2/scope_threads", 
    "session2/thread_builder", 
    "session2/workers", 
    "session2/workers2", 
    "session3/async_mutex", 
    "session3/blocking", 
    "session3/channels", 
    "session3/errors", 
    "session3/fileio", 
    "session3/hello_async", 
    "session3/hello_tokio", 
    "session3/hello_tokio2", 
    "session3/recursion", 
    "session3/rest_client", 
    "session3/tcp_server", 
    "session3/tokio_select", 
    "session3/tokio_select2", 
    "session3/tokio_testing", 
    "session4/db", 
    "session4/logspan", 
    "session4/thumbs", 
    "session4/web_service", 
    "session5/dropping", "session5/dropping_raii", 
    "session5/memory",
]
