[package]
name = "rest_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.47.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
