[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"]}
dotenv = "0.15.0"
openssl = { version = "0.10", features = ["vendored"] }